--- a/requirements.txt
+++ b/requirements.txt
@@ -1,74 +1,6 @@
-aiohttp==0.21.2
-appdirs==1.4.0
-Archey3==0.4
-Beaker==1.8.1
 beautifulsoup4==4.5.1
-Brlapi==0.6.5
-catfish==1.4.2
-chardet==2.3.0
-ConfigArgParse==0.11.0
-cupshelpers==1.0
-cycler==0.10.0
-Cython==0.25.1
-docutils==0.12
-flake8==3.2.1
-hangups==0.3.6
-html2text==2016.9.19
-httplib2==0.9.2
-isc==2.0
-Jinja2==2.8
-kazoo==2.2.1
-livestreamer==1.12.2
-louis==3.0.0
-Mako==1.0.6
-Markdown==2.6.7
-markdown2==2.3.1
-Markups==2.0.0
-MarkupSafe==0.23
-matplotlib==1.5.3
-mccabe==0.5.2
-meson==0.36.0
-nose==1.3.7
-numpy==1.11.2
-openshot-qt==2.1.0.dev0
-packaging==16.8
-pandas==0.19.1
-pexpect==4.2.1
-Pillow==3.4.2
-protobuf==3.0.2
-pssh==2.3.1
-ptyprocess==0.5.1
-purplex==0.2.4
-pycodestyle==2.2.0
-pycups==1.9.73
-pycurl==7.43.0
-pyflakes==1.3.0
-pyglet==1.2.4
-Pygments==2.1.3
-pygobject==3.22.0
-pyparsing==2.1.10
-pyPEG2==2.15.2
-python-dateutil==2.6.0
-python-libtorrent==1.1.1
-python-ptrace==0.8.1
-python-sane==2.8.2
-pytz==2016.7
-pyxdg==0.25
-PyYAML==3.12
-pyzmq==16.0.0
-Quamash==0.5.4
-readlike==0.1.1
-ReParser==1.4.3
-requests==2.12.3
-ReText==6.0.2
-robobrowser==0.5.3
-rpm-python==4.12.0.1
-six==1.10.0
-speedtest-cli==1.0.0
-stdeb==0.8.5
-team==1.0
+certifi==2016.9.26
+future==0.16.0
+python-telegram-bot==5.3.0
+terminaltables==3.1.0
 urllib3==1.19.1
-urwid==1.3.1
-virtualenv==15.0.3
-Werkzeug==0.11.11.dev0
-xlrd==1.0.0
